# Real-Time-Household-Water-Management-System

./: CMakeLists.txt  README.md  Real-Time-Household-Water-Management-System.code-workspace  main.c  project.c  realy_control.h  solenoid.h  tds_sensor.h  temparature.h  ultrasonic.h
React Web page/my embedded/: package-lock.json  package.json
React Web page/my embedded/src/: WaterManagement.jsx  button.jsx  card.jsx  index.css  main.jsx
arduino/firebase connection/: Database_vs_ESP32_Connection.ino
arduino/flow/: flow.ino
arduino/light_blinking/: light_blinking.ino  light_blinking_ON.ino
arduino/mainV01/: mainV01.ino
arduino/mainV02/: mainV02.ino
arduino/mainV03/: mainV03.ino
arduino/mainV04/: Relay.h  TdsSensor.h  TemperatureSensor.h  mainV04.ino
arduino/relay/: relay.ino
arduino/solenoid/: solenoid.ino
arduino/tds/directTds/: directTds.ino
arduino/tds/tdsAdvanced/: tdsAdvanced.ino
arduino/tds/tdsBasic/: tdsBasic.ino
arduino/tds/tdsFinal/: tdsFinal.ino
arduino/temp/: temp.ino
arduino/ultrasonic/: ultrasonic.ino
components/flow_sensor/: CMakeLists.txt  flow_sensor.c
components/relay_control/: CMakeLists.txt
components/solenoid_control/: CMakeLists.txt  solenoid_control.c
components/tds_sensor/: CMakeLists.txt
components/temperature_sensor/: CMakeLists.txt  temperature_sensor.c
components/ultrasonic_control/: CMakeLists.txt  ultrasonic_control.c
main/: CMakeLists.txt  Real-Time-Household-Water-Management-System.c  firebase.c  firebase.h  flow_sensor.h  relay_control.c  tds_sensor.c  wifi_connect.c  wifi_connect.h
(+7 files in other folders)
